--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,13 +12,13 @@
 @import "font-awesome";
 
 // custom
-@import "navigation";
 @import "devise_forms";
+@import "languages";
 
 // Template Base
 
 body {
-  margin-top: 100px;
+  margin-top: 50px;
   margin-bottom: 150px;
 
   font-family: $font-primary;
@@ -151,6 +151,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   padding-left: 20px;
   margin-bottom: 1px;
+}
 
-
+.jumbotron {
+  background-color: $orange;
+  text-align: center;
+  color: white;
 }
