--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
     </div>
 
     <ul class="nav navbar-nav navbar-right">
+      <li><%= link_to "Languages", languages_path %></li>
       <% if user_signed_in? %>
         <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'navbar-link' %></li>
       <% else %>
