--- a/app/assets/stylesheets/problems.scss
+++ b/app/assets/stylesheets/problems.scss
@@ -109,7 +109,7 @@ h4 {
     height: 100vh;
     margin-top: -3px;
 
-    #editor {
+    #editor, #specs {
       height: 100%;
       margin-top: 0;
       left: 0;
@@ -120,17 +120,11 @@ h4 {
         height: 100%;
       }
     }
+
   }
 }
 
+
 #exerciseSpecsTab, #exerciseEditorTab {
   float: right;
-}
-
-
-
-
-
-.tab-content > .active {
-  display: block;
 }
